--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ h1 {
     width: 300px;
     height: 300px;
     margin: 10px;
-    border: 2px solid pink); /* choose a color */
+    border: 2px solid pink; /* choose a color */
     display: block;
     margin: auto;
     }
