--- a/styles.css
+++ b/styles.css
@@ -30,8 +30,27 @@ h1 {
 
 h2 {
     color:pink;
-    text-align: center;
+    text-align: left;
 }
+.about{
+    display:flex;
+    flex-wrap:wrap;
+    margin-right: 100px;
+    margin-left: 100px;
+    justify-content: center;
+    }
+    .about p {
+    width:50%;
+    text-align: center;
+    margin: auto;
+    line-height: 125%;
+    }
+    .about img {
+    width: 220px;
+    height: 230px;
+    border-radius: 25%;
+    border: 2px solid rgb(255, 255, 255);
+    }
 h3 {
     text-align: center;
      font-style: Arial;
