--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,12 @@ h2 {
     border-radius: 25%;
     border: 2px solid rgb(255, 255, 255);
     }
+    .about img {
+        width: 220px;
+        height: 230px;
+        border-radius: 25%;
+        border: 2px solid rgb(255, 255, 255);
+        }
 h3 {
     text-align: center;
      font-style: Arial;
