--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 body{
-    background: darkcyan;
+    background: rgb(255, 255, 255);
     font-family: Arial, Helvetica, sans-serif;
 }
 h1 {
     text-align: center;
-    color: white;
+    color: rgb(255, 0, 166);
 }
 
 .projects {
